2011-03-21  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WIN_image): Fix regression: rotation of images
	with reversed axis was not working since rev. 1.92.

2011-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (equals): Test here for token index in range, rather than
	trusting all callers to get it right.

	* src/command.c src/parse.c: Token index range test is now redundant.

	* docs/gnuplot.doc: Document that ^D from an empty line acts as EOF.

2011-03-20  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgnuplib.c|h, src/win/wgraph.c, src/win/winmain.c, 
	src/win/wmenu.c, src/win/wpause.c, src/win/wtext.c: FAR pointers are
	no longer required.

	* src/win/winmain.c (WinExit): Explicitly close help window on exit.
	Fixes hangs of gnuplot when it is closed via the Windows taskbar 
	and help window	and graph window open.

	* src/win/wmenu.c (LoadMacros), src/win/wgnuplot.mnu ([Button]): Add
	icons to the text-window toolbar.

	* docs/windows/doc2html.c (process_line): Don't include '=' items in
	index. This avoids duplicate entries which caused wgnuplot to stall 
	when an e.g. 'set term png; help "png"' was issued.

2011-03-18  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wtext.c (TextCopyClip): Fix copying of last line of a
	marked region in case the marking exceeds the length of that
	line.

	* src/win/wgnuplib.rc, src/win/resourc.h: Remove dialog resource
	which was only used on Win16.

	* term/gd.trm (PNG_init): On Windows, set GDFONTPATH to %windir%\Fonts
	if not set previously.

	* src/plot.c (main), src/win/winmain.c (WinMain, WinExt): Always use 
	the ANSI codepage (instead of OEM) to ensure sure that the console 
	of gnuplot.exe and the graph window use the same codepage. Warn 
	users that raster fonts won't display all characters correctly and
	restore the codepage on exit.

2011-03-17  Ethan A Merritt  <merritt@u.washington.edu>

	* axis.c(gen_tics): Make sure the axis tic label format string is